--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
-
-    </head>
+  </head>
   <body>
+    <header>
+      <div class="logo-container">
+        <img src="images/icon 01.ico" alt="Logo" class="logo" />
+      </div>
+    </header>
     <div class="container">
       <div class="slider">
         <div class="slides" style="--img: url('../images/back1.png')">
@@ -98,5 +102,4 @@
       });
     </script>
   </body>
-
- </html>
+</html>
